--- a/app/src/main/res/layout/recipes.xml
+++ b/app/src/main/res/layout/recipes.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tttt"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:text="TextView"
